--- a/doc/plotsrc/tex/samplingfreq.tex
+++ b/doc/plotsrc/tex/samplingfreq.tex
@@ -25,7 +25,7 @@
   %% Border rectangle and label.
   \draw [line width=1pt] (0,0) rectangle (8.4cm, 4.25cm);
   \draw [anchor=south west] (0.1cm, 3.7cm)
-  node {$F(\omega)$: FT of \textbf{unsampled} $f(t)$};
+  node {$F(\omega)$: FT of \textbf{unsampled} $f(l)$};
 
 
   %% Draw the axis:
@@ -53,7 +53,7 @@
   %% Border rectangle and label.
   \draw [line width=1pt] (8.5cm,0) rectangle (17cm, 4.25cm);
   \draw [anchor=south west] (8.6cm, 3.7cm)
-  node {$F_s(\omega)$: FT of \textbf{sampled} $f_s(t)=f(t)\mathrm{III}_T$};
+  node {$F_s(\omega)$: FT of \textbf{sampled} $f_s(l)=f(l)\mathrm{III}_P$};
 
 
   %% Draw the axis:
